# dns-resilience-observatory

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  Dockerfile.measurements  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml  requirements.txt
api/: api.py  docs_views.py  schemas.py
data_gathering/: bootstrap_startup.py  celery_app.py
data_gathering/config/: db_connection.py
data_gathering/external_sources/: __init__.py  config.py
data_gathering/external_sources/apnic/: __init__.py
data_gathering/external_sources/caida/: __init__.py
data_gathering/external_sources/manycast/: __init__.py  fetcher.py
data_gathering/external_sources/odns_api/: __init__.py  fetcher.py
data_gathering/import/anycast/: __init__.py  import_anycast.py
data_gathering/imports/: __init__.py
data_gathering/tasks/: __init__.py  country_locations.py  dispatch.py
data_gathering/tools/: __init__.py  download_and_import_from_web.py
db/: apply_schema.py  data-sources.conf  data_source.py  load_anycast.py  load_forwarders.py  load_resolvers.py  resolver_identity.py
db/pgadmin/: provision_servers.py  servers.json.tmp
dns_resilience_observatory/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: urls.py  views.py
measurements/: __init__.py  celery_app.py  db.py
measurements/scripts/: __init__.py  assemble_metainformation_resolvers.py  get_resolvers.py
measurements/tasks/: __init__.py
nginx/: default.conf
resilience/: admin.py  models.py  services.py
templates/: redoc_docs.html
(+67 files in other folders)
