[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dns-resilience-observatory"
version = "0.1.0"
description = "DNS resolver ecosystem data gathering, import, API, and frontend tooling."
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "api*",
    "data_gathering*",
    "dns_resilience_observatory*",
    "frontend*",
    "resilience*",
]
